--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: "R For Data Science"
-description: "Lecture Notebooks"
+description: "A Short Course"
+logo: farside.png
