more css and html

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: "R For Data Science"
-description: " "
+description: "A Short Course by @lrdegeest"
 logo: farside.png
