--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 title: "R For Data Science"
 author: "@lrdegeest"
 description: " "
-logo: farside.png
+logo: farside.jpg
 show_downloads: "true"
